[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "2.3.0"
redbpf-probes = "2.3.0"
memoffset = "0.6.1"

[build-dependencies]
cargo-bpf = { version = "2.3.0", default-features = false, features = ["llvm13"] }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "openmonitor"
path = "src/openmonitor/main.rs"
required-features = ["probes"]

[[bin]]
name = "packet_tracer"
path = "src/packet_tracer/main.rs"
required-features = ["probes"]
